<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Define GAV coordinates -->
  <groupId>com.ge.research.sadl.darpa.aske.dialog</groupId>
  <artifactId>com.ge.research.sadl.darpa.aske.dialog.parent</artifactId>
  <version>1.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <!-- Build all modules in one place -->
  <name>DARPA-ASKE</name>
  <modules>
    <module>com.ge.research.sadl.darpa.aske.dialog</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.dependencies</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.feature</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ide</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.targetplatform</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.tests</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ui</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ui.tests</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.update</module>
  </modules>

  <!-- Set all properties in one place -->
  <properties>
    <!-- Properties of Maven plugins -->
    <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
    <maven.compiler.release>8</maven.compiler.release>
    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!-- Versions of plugins/dependencies -->
    <version.mwe2>2.12.1</version.mwe2>
    <version.sadl>3.5.0-SNAPSHOT</version.sadl>
    <version.surefire>3.0.0-M7</version.surefire>
    <version.tycho>2.7.5</version.tycho>
    <version.xtext>2.25.0</version.xtext>
    <version.xtext-antlr>2.1.1</version.xtext-antlr>
  </properties>

  <build>
    <!-- Configure all plugins in one place -->
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.ekryd.sortpom</groupId>
          <artifactId>sortpom-maven-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
            <createBackupFile>false</createBackupFile>
            <indentSchemaLocation>true</indentSchemaLocation>
            <lineSeparator>\n</lineSeparator>
            <predefinedSortOrder>custom_1</predefinedSortOrder>
            <sortDependencies>scope,groupId,artifactId</sortDependencies>
            <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
            <sortModules>true</sortModules>
            <sortPlugins>groupId,artifactId</sortPlugins>
            <sortProperties>true</sortProperties>
          </configuration>
          <executions>
            <execution>
              <id>default-sort</id>
              <goals>
                <goal>sort</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>eu.somatik.serviceloader-maven-plugin</groupId>
          <artifactId>serviceloader-maven-plugin</artifactId>
          <version>1.4.0</version>
          <executions>
            <execution>
              <id>default-generate</id>
              <goals>
                <goal>generate</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.2.0</version>
          <!-- Clean extra files created by build -->
          <configuration>
            <filesets>
              <fileset>
                <directory>${project.basedir}/xtend-gen</directory>
                <includes>
                  <include>**/*</include>
                </includes>
              </fileset>
            </filesets>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.10.1</version>
          <configuration>
            <compilerArgs>
              <arg>-Xlint:all</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${version.surefire}</version>
          <configuration>
            <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.surefire}</version>
          <configuration>
            <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
          </configuration>
        </plugin>
        <!-- Define classpath and configuration needed to run Mwe2Launcher -->
        <plugin>
          <?m2e ignore?>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.1.0</version>
          <dependencies>
            <dependency>
              <groupId>com.ge.research.sadl</groupId>
              <artifactId>com.ge.research.sadl.xtextgenerator</artifactId>
              <version>${version.sadl}</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.emf</groupId>
              <artifactId>org.eclipse.emf.mwe2.launch</artifactId>
              <version>${version.mwe2}</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.xtext</groupId>
              <artifactId>org.eclipse.xtext.common.types</artifactId>
              <version>${version.xtext}</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.xtext</groupId>
              <artifactId>org.eclipse.xtext.xtext.generator</artifactId>
              <version>${version.xtext}</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.xtext</groupId>
              <artifactId>xtext-antlr-generator</artifactId>
              <version>${version.xtext-antlr}</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <id>default-java</id>
              <goals>
                <goal>java</goal>
              </goals>
              <phase>generate-sources</phase>
            </execution>
          </executions>
        </plugin>
        <!-- Goals: mvn -N versions:display-{dependency,plugin,property}-updates -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.13.0</version>
        </plugin>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <versionRange>[2.7.0,)</versionRange>
                    <goals>
                      <goal>validate-classpath</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        <plugin>
          <?m2e ignore?>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>target-platform-configuration</artifactId>
          <version>${version.tycho}</version>
          <configuration>
            <environments>
              <environment>
                <os>linux</os>
                <ws>gtk</ws>
                <arch>x86_64</arch>
              </environment>
              <environment>
                <os>macosx</os>
                <ws>cocoa</ws>
                <arch>x86_64</arch>
              </environment>
              <environment>
                <os>win32</os>
                <ws>win32</ws>
                <arch>x86_64</arch>
              </environment>
            </environments>
            <target>
              <artifact>
                <groupId>com.ge.research.sadl.darpa.aske.dialog</groupId>
                <artifactId>com.ge.research.sadl.darpa.aske.dialog.targetplatform</artifactId>
                <version>${project.version}</version>
              </artifact>
            </target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${version.tycho}</version>
          <configuration>
            <compilerArgument>-err:-forbidden</compilerArgument>
            <useProjectSettings>false</useProjectSettings>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-maven-plugin</artifactId>
          <version>${version.tycho}</version>
          <extensions>true</extensions>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-repository-plugin</artifactId>
          <version>${version.tycho}</version>
          <configuration>
            <includeAllDependencies>true</includeAllDependencies>
          </configuration>
        </plugin>
        <!-- To skip running (and compiling) tests, use: -Dmaven.test.skip
             To skip tests, but still compile them, use: -DskipTests
             To run all tests but only fail at end, use: -fae -->
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${version.tycho}</version>
          <configuration>
            <failIfNoTests>true</failIfNoTests>
            <useUIHarness>true</useUIHarness>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.xtend</groupId>
          <artifactId>xtend-maven-plugin</artifactId>
          <version>${version.xtext}</version>
          <configuration>
            <outputDirectory>${project.basedir}/xtend-gen</outputDirectory>
            <testOutputDirectory>${project.basedir}/xtend-gen</testOutputDirectory>
            <xtendAsPrimaryDebugSource>true</xtendAsPrimaryDebugSource>
          </configuration>
          <executions>
            <execution>
              <id>default-compile</id>
              <goals>
                <goal>compile</goal>
              </goals>
            </execution>
            <execution>
              <id>default-xtend-install-debug-info</id>
              <goals>
                <goal>xtend-install-debug-info</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Keep our poms looking tidy -->
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
      </plugin>
      <!-- Define our Eclipse target platform -->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
      </plugin>
      <!-- Build Eclipse bundles with Tycho -->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- Build on JDK 9 or later with -add-modules=ALL-SYSTEM -->
    <profile>
      <id>jdk9-or-newer</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
      </properties>
    </profile>
  </profiles>

</project>
